Adding latest code-configurator

--- a/package.json
+++ b/package.json
@@ -25,30 +25,46 @@
   },
   "scripts": {
     "build": "npm run ts -- -p tsconfig.prod.json",
-    "clean": "rm -rf dist/",
+    "clean": "shx rm -rf dist/",
     "gulp": "gulp",
     "install:deps": "sh ./src/scripts/npm-install.sh",
     "lint": "tslint --project tsconfig.json --config tslint.prod.json --format stylish",
     "lint:debug": "tslint --project tsconfig.json --config tslint.json --format stylish",
-    "prepublishOnly": "rm -rf dist/ && npm run build",
-    "test": "npm run lint && npm run ts && npm run gulp && wct --skip-selenium-install --config-file wct.config.json",
-    "test:ci": "wct --config-file wct.config.ci.json",
-    "test:sl": "wct --config-file wct.config.sl.json",
+    "prepublishOnly": "npm run clean && npm run build",
+    "test": "npm run lint && wct --skip-selenium-install --config-file wct.config.json",
+    "test:ci": "wct --config-file ./wct.config.ci.json",
+    "test:sl": "wct --config-file ./wct.config.sl.json",
     "ts": "tsc",
     "watch": "npm run ts -- --watch"
   },
-  "dependencies": {},
+  "files": [
+    "dist/**/*.d.ts.map",
+    "dist/**/*.d.ts",
+    "dist/**/*.js.map",
+    "dist/**/*.js"
+  ],
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
+  "dependencies": {
+    "@material/mwc-button": "^0.8.0",
+    "@types/prismjs": "^1.16.0",
+    "lit-element": "^2.2.1",
+    "lit-html": "^1.1.2",
+    "prismjs": "^1.17.1"
+  },
   "devDependencies": {
-    "@reallyland/tslint-config": "^1.0.0",
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.6",
+    "@reallyland/tsconfig": "^1.0.0",
+    "@reallyland/tslint-config": "^1.1.1",
+    "@types/chai": "^4.2.1",
+    "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
-    "esm": "^3.2.22",
-    "gulp": "^4.0.1",
-    "mocha": "^5.2.0",
-    "tslint": "^5.15.0",
-    "typescript": "^3.4.5",
-    "wct-mocha": "^1.0.0"
+    "esm": "^3.2.25",
+    "mocha": "^6.2.0",
+    "shx": "^0.3.2",
+    "tslint": "^5.19.0",
+    "typescript": "^3.6.2",
+    "wct-mocha": "^1.0.1"
   },
   "engines": {
     "node": ">= 8.16.0",
