--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,4 +1,5 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["src/test/**/*", "src/demo/**/*"]
+  "include": ["src/*"],
+  "exclude": ["src/test/**/*", "src/demo/**/*", "dist"]
 }
