--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,20 +2,20 @@
 #
 # Check https://circleci.com/docs/2.0/language-javascript/ for more details
 #
-version: 2
+version: 2.1
 
 aliases:
   - &restore-cache-deps
-      key: dependency-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "package.json" }}-2
+      key: dependency-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "package.json" }}-2.1
   - &save-cache-deps
-      key: dependency-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "package.json" }}-2
+      key: dependency-cache-{{ .Environment.CIRCLE_BRANCH }}-{{ checksum "package.json" }}-2.1
       paths:
         - node_modules
 
 defaults: &defaults
   working_directory: ~/really-elements
   docker:
-    - image: circleci/node:12-browsers
+    - image: circleci/node:8-browsers
 
 jobs:
   build:
@@ -24,14 +24,21 @@ jobs:
       - checkout
       - restore_cache: *restore-cache-deps
       - run:
+          name: Git Log
+          command: |
+            if [ -z "$(git describe --exact-match HEAD)" ]; then
+              echo "Not tagged commit"
+            fi
+
+            if [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+$')" ]; then
+              echo "No tag/ version in commit message"
+            fi
+      - run:
           name: Install Global Dependencies
           command: sudo npm i -g npm@latest --quiet
       - run:
           name: Install Dependencies
           command: npm ci --quiet
-      - run:
-          name: Install Dependencies of All Modules
-          command: npm run install:deps
       - save_cache: *save-cache-deps
       - run:
           name: Versions
@@ -42,9 +49,6 @@ jobs:
       - run:
           name: Build
           command: npm run ts
-      - run:
-          name: Copy Dependencies For Testing
-          command: npm run gulp
       - persist_to_workspace:
           root: ~/really-elements
           paths:
@@ -59,155 +63,63 @@ jobs:
           name: Test
           command: npx -p web-component-tester -- npm run test:ci
 
-  test_ie_11:
+  # According to the resources below, Edge 15 is the oldest supported MS Edge.
+  # https://en.wikipedia.org/wiki/Microsoft_Edge
+  # https://reports.adduplex.com/#/r/2019-04
+  # https://en.wikipedia.org/wiki/Windows_10_version_history
+  test_edge_ie:
     <<: *defaults
     steps:
       - attach_workspace:
           at: ~/really-elements
       - run:
-          name: Test (Internet Explorer 11)
+          name: Test (Edge 17, 15, Internet Explorer 11)
           command: |
-            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
-              npx -p web-component-tester -- npm run test:sl -- -s 'windows 7/internet explorer@11';
+            if [ -z "${CIRCLE_PULL_REQUEST}" ] && [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+$')" ]; then
+              npx -p web-component-tester -- npm run test:sl -- -s 'windows 10/microsoftedge@17' -s 'windows 10/microsoftedge@15' -s 'windows 10/internet explorer@11';
             fi
 
-  test_edge_17:
+  test_safari:
     <<: *defaults
     steps:
       - attach_workspace:
           at: ~/really-elements
       - run:
-          name: Test (Edge 17)
+          name: Test (Safari 10.1, 9)
           command: |
-            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
-              npx -p web-component-tester -- npm run test:sl -- -s 'windows 10/microsoftedge@17';
+            if [ -z "${CIRCLE_PULL_REQUEST}" ] && [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+$')" ]; then
+              npx -p web-component-tester -- npm run test:sl -- -s 'macos 10.12/safari@10.1' -s 'os x 10.11/safari@9';
             fi
 
-  test_edge_13:
+  test_old_firefox_chrome:
     <<: *defaults
     steps:
       - attach_workspace:
           at: ~/really-elements
       - run:
-          name: Test (Edge 13)
+          name: Test (Firefox 62, Chrome 69)
           command: |
-            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
-              npx -p web-component-tester -- npm run test:sl -- -s 'windows 10/microsoftedge@13';
-            fi
-
-  test_safari_10_1:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/really-elements
-      - run:
-          name: Test (Safari 10.1)
-          command: |
-            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
-              npx -p web-component-tester -- npm run test:sl -- -s 'macos 10.12/safari@10.1';
-            fi
-
-  test_safari_9:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/really-elements
-      - run:
-          name: Test (Safari 9)
-          command: |
-            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
-              npx -p web-component-tester -- npm run test:sl -- -s 'os x 10.11/safari@9';
-            fi
-
-  test_chrome_69:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/really-elements
-      - run:
-          name: Test (Chrome 69)
-          command: |
-            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
-              npx -p web-component-tester -- npm run test:sl -- -s 'windows 10/chrome@69';
-            fi
-
-  test_chrome_41:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/really-elements
-      - run:
-          name: Test (Chrome 41)
-          command: |
-            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
-              npx -p web-component-tester -- npm run test:sl -- -s 'Linux/chrome@41';
-            fi
-
-  test_firefox_63:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/really-elements
-      - run:
-          name: Test (Firefox 63)
-          command: |
-            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
-              npx -p web-component-tester -- npm run test:sl -- -s 'windows 10/firefox@63';
-            fi
-
-  test_firefox_62:
-    <<: *defaults
-    steps:
-      - attach_workspace:
-          at: ~/really-elements
-      - run:
-          name: Test (Firefox 62)
-          command: |
-            if [ -z "${CIRCLE_PULL_REQUEST}" ]; then
-              npx -p web-component-tester -- npm run test:sl -- -s 'macos 10.14/firefox@62';
+            if [ -z "${CIRCLE_PULL_REQUEST}" ] && [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+$')" ]; then
+              npx -p web-component-tester -- npm run test:sl -- -s 'macos 10.14/firefox@62' -s 'windows 10/chrome@69';
             fi
 
 workflows:
   version: 2
-  node-multi-build:
+  multi-build-n-test:
     jobs:
       - build
       - test_local:
           requires:
             - build
 
-      - test_ie_11:
+      - test_edge_ie:
           requires:
             - build
 
-      - test_edge_17:
+      - test_safari:
           requires:
             - build
-      - test_edge_13:
-          requires:
-            - build
-            - test_edge_17
 
-      - test_safari_10_1:
+      - test_old_firefox_chrome:
           requires:
             - build
-      - test_safari_9:
-          requires:
-            - build
-            - test_safari_10_1
-
-      - test_chrome_69:
-          requires:
-            - build
-      - test_chrome_41:
-          requires:
-            - build
-            - test_chrome_69
-
-      - test_firefox_63:
-          requires:
-            - build
-      - test_firefox_62:
-          requires:
-            - build
-            - test_firefox_63
