--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,39 +1,11 @@
 {
+  "extends": "@reallyland/tsconfig/browser",
   "compilerOptions": {
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "forceConsistentCasingInFileNames": true,
-    "inlineSources": true,
-    "listEmittedFiles": true,
-    "newLine": "LF",
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "removeComments": true,
-    "resolveJsonModule": true,
-    "sourceMap": true,
-    "strict": true,
-
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext",
-      "esnext.array",
-      "esnext.asynciterable",
-      "esnext.intl",
-      "esnext.symbol"
-    ],
-    "moduleResolution": "node",
-    "module": "esnext",
-    "target": "esnext",
     "rootDir": "src",
     "outDir": "dist",
-    "declaration": true,
-    "declarationMap": true,
-    "declarationDir": "dist"
+    "declarationDir": "dist",
+    "importHelpers": true,
   },
   "include": ["src/**/*.ts"],
-  "exclude": ["dist"]
+  "exclude": ["node_modules", "dist"]
 }
