--- a/wct.config.sl.json
+++ b/wct.config.sl.json
@@ -2,6 +2,7 @@
   "moduleResolution": "node",
   "npm": true,
   "suites": ["src/test"],
+  "testTimeout": 539999,
   "verbose": false,
   "expanded": true,
   "compile": "auto"
