--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "@types/prismjs": "^1.16.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
-    "prismjs": "^1.17.1"
+    "prismjs": "^1.17.1",
+    "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@reallyland/tsconfig": "^1.0.0",
