--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "declarationDir": "dist",
-    "importHelpers": true,
+    "importHelpers": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["node_modules", "dist"]
