--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,5 +1,8 @@
 {
   "extends": "./tsconfig.json",
+  "compilerOptions": {
+    "importHelpers": true
+  },
   "include": ["src/*"],
   "exclude": ["src/test/**/*", "src/demo/**/*", "dist"]
 }
