fix: Improve pre-commit hook to check TypeScript compilation

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run lint && npm run ts && npm run clean"
     }
   },
   "dependencies": {
