--- a/package.json
+++ b/package.json
@@ -52,25 +52,25 @@
     }
   },
   "dependencies": {
-    "@material/mwc-button": "^0.10.0",
+    "@material/mwc-button": "^0.11.1",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
-    "nodemod": "^2.1.0-rc.1",
+    "nodemod": "^2.2.3",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
-    "@reallyland/tsconfig": "^1.0.0",
+    "@reallyland/tsconfig": "^1.0.1",
     "@reallyland/tslint-config": "^1.1.1",
-    "@types/chai": "^4.2.3",
+    "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "@types/prismjs": "^1.16.0",
     "chai": "^4.2.0",
     "esm": "^3.2.25",
-    "husky": "^3.0.9",
-    "mocha": "^6.2.1",
+    "husky": "^3.1.0",
+    "mocha": "^6.2.2",
     "shx": "^0.3.2",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.4",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.3",
     "wct-mocha": "^1.0.1"
   },
   "engines": {
