--- a/package.json
+++ b/package.json
@@ -48,29 +48,29 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint && npm run ts && npm run clean"
+      "pre-commit": "npm run lint && tsc --noEmit"
     }
   },
   "dependencies": {
-    "@material/mwc-button": "^0.12.0",
+    "@material/mwc-button": "^0.13.0",
     "lit-element": "^2.2.1",
     "lit-html": "^1.1.2",
-    "nodemod": "^2.2.5",
+    "nodemod": "^2.3.0",
     "tslib": "^1.10.0"
   },
   "devDependencies": {
     "@reallyland/tsconfig": "^1.0.1",
     "@reallyland/tslint-config": "^1.1.1",
-    "@types/chai": "^4.2.7",
-    "@types/mocha": "^5.2.7",
+    "@types/chai": "^4.2.8",
+    "@types/mocha": "^7.0.1",
     "@types/prismjs": "^1.16.0",
     "chai": "^4.2.0",
     "esm": "^3.2.25",
-    "husky": "^3.1.0",
-    "mocha": "^7.0.0",
+    "husky": "^4.2.1",
+    "mocha": "^7.0.1",
     "shx": "^0.3.2",
-    "tslint": "^5.20.1",
-    "typescript": "^3.7.4",
+    "tslint": "^6.0.0",
+    "typescript": "^3.7.5",
     "wct-mocha": "^1.0.1"
   },
   "engines": {
