--- a/.github/workflows/sauce-labs.yml
+++ b/.github/workflows/sauce-labs.yml
@@ -28,7 +28,7 @@ jobs:
   #       run: |
   #         echo '::set-env name=SKIP_CI::true'
 
-  #         if [ -z "$(git describe --exact-match HEAD)" ] && [ -z git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+') ]; then
+  #         if [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
   #           echo '::set-env name=SKIP_CI::false'
   #         fi
 
@@ -77,7 +77,7 @@ jobs:
           SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
           SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
         run: |
-          if [ -z "$(git describe --exact-match HEAD)" ] && [ -z git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+') ]; then
+          if [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
             npm run test:sl -- -s 'windows 10/microsoftedge@17' -s 'windows 10/microsoftedge@15' -s 'windows 10/internet explorer@11';
           fi
 
@@ -126,7 +126,7 @@ jobs:
           SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
           SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
         run: |
-          if [ -z "$(git describe --exact-match HEAD)" ] && [ -z git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+') ]; then
+          if [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
             npm run test:sl -- -s 'macos 10.12/safari@10.1' -s 'os x 10.11/safari@9';
           fi
 
@@ -175,6 +175,6 @@ jobs:
           SAUCE_ACCESS_KEY: ${{ secrets.SAUCE_ACCESS_KEY }}
           SAUCE_USERNAME: ${{ secrets.SAUCE_USERNAME }}
         run: |
-          if [ -z "$(git describe --exact-match HEAD)" ] && [ -z git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+') ]; then
+          if [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
             npm run test:sl -- -s 'macos 10.14/firefox@62' -s 'windows 10/chrome@69';
           fi
