--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,19 +46,19 @@ jobs:
     timeout-minutes: 120
 
     steps:
-      - name: Git log
-        run: |
-          # echo '::set-env name=CI_SKIP::false'
+      # - name: Git log
+      #   run: |
+      #     echo '::set-env name=CI_SKIP::false'
 
-          if [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
-            echo '::set-env name=CI_SKIP::true'
-          fi
+      #     if [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
+      #       echo '::set-env name=CI_SKIP::true'
+      #     fi
 
       - name: Log env
         run: |
           echo $CI_SKIP
-        env:
-          CI_SKIP: ${{ env.CI_SKIP }}
+        # env:
+        #   CI_SKIP: ${{ env.CI_SKIP }}
 
       - name: Checkout
         if: "env.CI_SKIP == 'false'"
