--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,25 +16,6 @@ env:
   CI_SKIP: false
 
 jobs:
-  # env.CI_SKIP == 'true' is not supported at job level
-  # check_ci:
-  #   name: ${{ matrix.os }} ${{ matrix.target }}
-  #   runs-on: ${{ matrix.os }}
-  #   timeout-minutes: 120
-  #   strategy:
-  #     matrix:
-  #       os: [ubuntu-18.04]
-  #       target: [13.x]
-
-  #   steps:
-  #     - name: Git log
-  #       run: |
-  #         echo '::set-env name=CI_SKIP::true'
-
-  #         if [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
-  #           echo '::set-env name=CI_SKIP::false'
-  #         fi
-
   test:
     if: "!contains(github.event.head_commit.message, '[ci skip]') && !contains(github.event.head_commit.message, 'doc:')"
     name: ${{ matrix.os }} ${{ matrix.target }}
@@ -46,19 +27,11 @@ jobs:
     timeout-minutes: 120
 
     steps:
-      # - name: Git log
-      #   run: |
-      #     echo '::set-env name=CI_SKIP::false'
-
-      #     if [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
-      #       echo '::set-env name=CI_SKIP::true'
-      #     fi
-
-      - name: Log env
+      - name: Git log
         run: |
-          echo $CI_SKIP
-        # env:
-        #   CI_SKIP: ${{ env.CI_SKIP }}
+          if [ -n "$(git describe --exact-match HEAD)" ] && [ -n "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
+            echo '::set-env name=CI_SKIP::true'
+          fi
 
       - name: Checkout
         if: "env.CI_SKIP == 'false'"
@@ -101,6 +74,4 @@ jobs:
       - name: Run Test
         if: "env.CI_SKIP == 'false'"
         run: |
-          if [ -z "$(git describe --exact-match HEAD)" ] && [ -z "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
-            npm run test:ci
-          fi
+          npm run test:ci
