--- a/.github/workflows/sauce-labs.yml
+++ b/.github/workflows/sauce-labs.yml
@@ -29,7 +29,7 @@ jobs:
     steps:
       - name: Git log
         run: |
-          if [ -n "$(git describe --exact-match HEAD)" ] && [ -n "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
+          if [ -n "$(git log --format=%B -n 1 | grep -iE '^[0-9]+[.]{1,}[0-9]+[.]{1,}[0-9]+')" ]; then
             echo '::set-env name=CI_SKIP::true'
           fi
 
