--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "exports": {
     ".": "./dist/index.js",
     "./clipboard-copy": "./dist/clipboard-copy/clipboard-copy.js",
+    "./really-clipboard-copy": "./dist/clipboard-copy/really-clipboard-copy.js",
     "./code-configurator": "./dist/code-configurator/code-configurator.js"
   },
   "main": "./dist/index.js",
