--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     ".": "./dist/index.js",
     "./clipboard-copy": "./dist/clipboard-copy/clipboard-copy.js",
     "./really-clipboard-copy": "./dist/clipboard-copy/really-clipboard-copy.js",
-    "./code-configurator": "./dist/code-configurator/code-configurator.js"
+    "./code-configurator": "./dist/code-configurator/code-configurator.js",
+    "./really-code-configurator": "./dist/code-configurator/really-code-configurator.js"
   },
   "main": "./dist/index.js",
   "module": "./dist/index.js",
@@ -44,8 +45,8 @@
     "check": "package-check",
     "clean": "shx rm -rf .*cache *.log coverage/ dist/ logs/",
     "postinstall": "npm dedupe",
-    "lint": "tslint --project tsconfig.json --config tslint.prod.json --format stylish",
-    "lint:debug": "tslint --project tsconfig.json --config tslint.json --format stylish",
+    "lint": "eslint src/**/*.ts --ext .js,.jsx,.ts,.tsx",
+    "lint:build": "npm run lint -- --config .build.eslintrc.json",
     "prepublishOnly": "npm run lint && npm run build",
     "test": "wtr",
     "ts": "tsc",
@@ -71,10 +72,17 @@
     "@reallyland/tslint-config": "^1.1.1",
     "@skypack/package-check": "^0.2.2",
     "@types/prismjs": "^1.16.0",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
     "@web/dev-server-esbuild": "^0.2.10",
     "@web/test-runner": "^0.11.7",
     "@web/test-runner-mocha": "^0.6.0",
     "@web/test-runner-playwright": "^0.7.2",
+    "eslint": "^7.16.0",
+    "eslint-plugin-lit": "^1.3.0",
+    "eslint-plugin-lit-a11y": "^1.0.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-regexp": "^0.1.1",
     "husky": "^4.2.5",
     "mocha": "^8.2.1",
     "tslint": "^5.20.1",
