--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "check": "package-check",
     "clean": "shx rm -rf .*cache *.log coverage/ dist/ logs/",
     "postinstall": "npm dedupe",
+    "commitlint": "npm run commitlint",
     "lint": "eslint src/**/*.ts --ext .js,.jsx,.ts,.tsx",
     "lint:build": "npm run lint -- --config .build.eslintrc.json",
     "prepublishOnly": "npm run lint && npm run build",
@@ -54,10 +55,10 @@
     "watch": "wtr --watch",
     "wtr": "node --max-old-space-size=8192 --trace-deprecation node_modules/@web/test-runner/dist/bin.js"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm run check && npm run lint && tsc --noEmit"
-    }
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "dependencies": {
     "@material/mwc-button": "^0.20.0",
@@ -67,6 +68,7 @@
     "tslib": "^2.0.3"
   },
   "devDependencies": {
+    "@commitlint/config-conventional": "^12.0.1",
     "@esm-bundle/chai": "^4.1.5",
     "@open-wc/testing": "^2.5.32",
     "@reallyland/tsconfig": "^3.0.2",
@@ -75,15 +77,16 @@
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "@web/dev-server-esbuild": "^0.2.10",
-    "@web/test-runner": "^0.11.7",
-    "@web/test-runner-mocha": "^0.6.0",
-    "@web/test-runner-playwright": "^0.7.2",
+    "@web/test-runner": "^0.12.17",
+    "@web/test-runner-mocha": "^0.7.2",
+    "@web/test-runner-playwright": "^0.8.4",
+    "commitlint": "^12.0.1",
     "eslint": "^7.16.0",
     "eslint-plugin-lit": "^1.3.0",
     "eslint-plugin-lit-a11y": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-regexp": "^0.1.1",
-    "husky": "^4.2.5",
+    "eslint-plugin-regexp": "^0.6.3",
+    "husky": "^6.0.0",
     "typescript": "^4.1.3"
   },
   "engines": {
