--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "@material/mwc-button": "^0.20.0",
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
-    "nodemod": "^2.6.1",
+    "nodemod": "2.6.1",
     "tslib": "^2.0.3"
   },
   "devDependencies": {
@@ -77,15 +77,15 @@
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
     "@web/dev-server-esbuild": "^0.2.10",
-    "@web/test-runner": "^0.12.17",
-    "@web/test-runner-mocha": "^0.7.2",
-    "@web/test-runner-playwright": "^0.8.4",
+    "@web/test-runner": "^0.11.7",
+    "@web/test-runner-mocha": "^0.6.0",
+    "@web/test-runner-playwright": "^0.7.2",
     "commitlint": "^12.0.1",
     "eslint": "^7.16.0",
     "eslint-plugin-lit": "^1.3.0",
     "eslint-plugin-lit-a11y": "^1.0.1",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-regexp": "^0.6.3",
+    "eslint-plugin-regexp": "^0.1.1",
     "husky": "^6.0.0",
     "typescript": "^4.1.3"
   },
