--- a/package.json
+++ b/package.json
@@ -64,30 +64,30 @@
     "@material/mwc-button": "^0.20.0",
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
-    "nodemod": "2.6.1",
+    "nodemod": "^2.6.1",
     "tslib": "^2.0.3"
   },
   "devDependencies": {
     "@commitlint/config-conventional": "^12.0.1",
-    "@esm-bundle/chai": "^4.1.5",
+    "@esm-bundle/chai": "^4.3.4",
     "@open-wc/testing": "^2.5.32",
     "@reallyland/tsconfig": "^3.0.2",
     "@skypack/package-check": "^0.2.2",
-    "@types/prismjs": "^1.16.0",
-    "@typescript-eslint/eslint-plugin": "^4.12.0",
-    "@typescript-eslint/parser": "^4.12.0",
+    "@types/prismjs": "^1.16.4",
+    "@typescript-eslint/eslint-plugin": "^4.20.0",
+    "@typescript-eslint/parser": "^4.20.0",
     "@web/dev-server-esbuild": "^0.2.10",
-    "@web/test-runner": "^0.11.7",
-    "@web/test-runner-mocha": "^0.6.0",
-    "@web/test-runner-playwright": "^0.7.2",
+    "@web/test-runner": "^0.12.17",
+    "@web/test-runner-mocha": "^0.7.2",
+    "@web/test-runner-playwright": "^0.8.4",
     "commitlint": "^12.0.1",
-    "eslint": "^7.16.0",
+    "eslint": "^7.23.0",
     "eslint-plugin-lit": "^1.3.0",
     "eslint-plugin-lit-a11y": "^1.0.1",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-regexp": "^0.1.1",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-regexp": "^0.7.4",
     "husky": "^6.0.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.2.3"
   },
   "engines": {
     "node": ">= 10.18.1",
