--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A collection of opinionated custom elements for the web",
   "keywords": [
     "elements",
+    "lit",
     "lit-element",
     "lit-html",
     "polymer",
@@ -50,6 +51,8 @@
     "lint": "eslint src/**/*.ts --ext .js,.jsx,.ts,.tsx",
     "lint:build": "npm run lint -- --config .build.eslintrc.json",
     "prepublishOnly": "npm run lint && npm run build",
+    "serve": "npm x -y @web/dev-server@latest -- wds --node-resolve -dw -p 3000",
+    "serve:app": "npm x -y @web/dev-server@latest -- wds --node-resolve -dw -p 3000 -a demo.html",
     "test": "wtr",
     "ts": "tsc",
     "watch": "wtr --watch",
@@ -61,32 +64,33 @@
     ]
   },
   "dependencies": {
-    "@material/mwc-button": "^0.20.0",
-    "lit-element": "^2.3.1",
-    "lit-html": "^1.2.1",
-    "nodemod": "^2.6.1",
-    "tslib": "^2.0.3"
+    "@material/mwc-button": "^0.25.3",
+    "lit": "^2.1.1",
+    "tslib": "^2.3.1"
   },
   "devDependencies": {
-    "@commitlint/config-conventional": "^12.0.1",
-    "@esm-bundle/chai": "^4.3.4",
-    "@open-wc/testing": "^2.5.32",
-    "@reallyland/tsconfig": "^3.0.2",
+    "@commitlint/config-conventional": "^16.0.0",
+    "@esm-bundle/chai": "^4.3.4-fix.0",
+    "@open-wc/testing": "^3.0.3",
+    "@reallyland/esm": "^0.0.3",
+    "@reallyland/tsconfig": "^4.0.1",
     "@skypack/package-check": "^0.2.2",
     "@types/prismjs": "^1.16.4",
-    "@typescript-eslint/eslint-plugin": "^4.20.0",
-    "@typescript-eslint/parser": "^4.20.0",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
     "@web/dev-server-esbuild": "^0.2.10",
-    "@web/test-runner": "^0.12.17",
+    "@web/test-runner": "^0.13.25",
     "@web/test-runner-mocha": "^0.7.2",
     "@web/test-runner-playwright": "^0.8.4",
-    "commitlint": "^12.0.1",
-    "eslint": "^7.23.0",
+    "commitlint": "^16.0.2",
+    "eslint": "^8.6.0",
     "eslint-plugin-lit": "^1.3.0",
-    "eslint-plugin-lit-a11y": "^1.0.1",
-    "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-regexp": "^0.7.4",
-    "husky": "^6.0.0",
+    "eslint-plugin-lit-a11y": "^2.2.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-regexp": "^1.5.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "nano-staged": "^0.5.0",
+    "simple-git-hooks": "^2.7.0",
     "typescript": "^4.2.3"
   },
   "engines": {
